<resources>
    <string name="app_name" translatable="false">Bitrise App</string>
    <string name="copy_apps" translatable="false">APPS</string>

    <string name="copy_log_in">Log In</string>
    <string name="copy_input_access_token">"Input your personal access token"</string>
    <string name="error_access_token_validation">Please check your access token on Bitrise.io</string>


    <string name="copy_dashboard">Dashboard</string>
    <string name="copy_profile">Profile</string>

    <string name="copy_abort">Abort</string>
    <string name="copy_builds">Builds</string>
    <string name="copy_branch">Branch</string>
    <string name="copy_workflow">Workflow</string>

    <string name="copy_here">here</string>
    <string name="copy_state_running">Running</string>
    <string name="copy_state_success">Success</string>
    <string name="copy_state_aborted">Aborted</string>
    <string name="copy_state_on_hold">On hold</string>
    <string name="copy_state_failed">Failed</string>
    <string name="copy_start_a_build">Start Build</string>
    <string name="copy_start_build">Start Build</string>

    <string name="copy_get_token_message">Don\'t have a token? get it </string>

    <string name="hint_start_build_message">Message: e.g Triggered by Bitrise App</string>

    <string name="copy_your_recent_activity">Your recent activity</string>
    <string name="copy_organizations">Organizations</string>
    <string name="copy_log_out">Log Out</string>
    <string name="copy_share">Share</string>

    <string name="title_build_time">Build time</string>

    <string name="copy_metrics">Metrics</string>
    <string name="copy_list">List</string>
    <string name="cpy_add_new_app">Add New App</string>
    <string name="copy_build_configuration">Build Configuration</string>

    <!--Charts Title-->
    <string name="title_status_distribution">Total Credits</string>
    <string name="title_chart_credits_distribution">Credits by State</string>

    <!--Formats-->
    <string name="format_credits_value" translatable="false">%s cr</string>

</resources>