<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bitrise.app.viewModels.home.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_xlarge"
        android:paddingRight="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_small"
        tools:context=".ui.fragments.ProfileFragment">

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="@dimen/size_profile_image"
            android:layout_height="@dimen/size_profile_image"
            android:src="@mipmap/ic_default_avatar"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView_user_description"
            style="@style/TextBig.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/imageView_profile"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toRightOf="@id/imageView_profile"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView_profile"
            app:user_description="@{viewModel.profile}"
            tools:text="UserName" />

        <com.bitrise.app.ui.views.VectorTextView
            style="@style/TextSmall.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_log_out"
            app:drawableLeft="@drawable/ic_logout"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawablePadding="@dimen/spacing_micro"
            android:onClick="@{()-> viewModel.logOut()}"
            app:layout_constraintLeft_toLeftOf="@id/textView_user_description"
            app:layout_constraintTop_toBottomOf="@id/textView_user_description" />

        <LinearLayout
            android:id="@+id/container_organizations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_standard"
            app:layout_constraintTop_toBottomOf="@id/imageView_profile">

            <TextView
                style="@style/TextBig.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_organizations" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_organizations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_empty"
            android:layout_marginTop="@dimen/spacing_large"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_standard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_organizations"
            app:layout_constraintVertical_bias="0">

            <TextView
                style="@style/TextBig.Black.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_your_recent_activity" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_userActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
